cabal-version: 3.0
name:          tv2
version:       0.1.0.0
build-type:    Simple

common lang
  build-depends:      base >=4.12 && <4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DuplicateRecordFields
    NamedFieldPuns

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang
  build-depends:
    , containers  ==0.6.2.1
    , extra       ==1.7.1

  -- cabal-fmt: expand src
  exposed-modules:
    TV2.Factories
    TV2.Levels
    TV2.Solver
    TV2.Types

  hs-source-dirs:  src

executable tv2
  import:         lang
  build-depends:
    , containers            ==0.6.2.1
    , optparse-applicative  ==0.15.1.0
    , tv2

  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite tests
  import:         lang
  build-depends:
    , containers  ==0.6.2.1
    , hspec       ==2.7.1
    , tv2

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
